# smileslot

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  SECURITY.md  build.sh  check_version.py  compatibility_matrix.sh  docker-compose.yml  manage.py  pyproject.toml  render.yaml  requirements.txt  setup.cfg  tatus
Accounts/: admin.py  apps.py  constants.py  forms.py  managers.py  models.py  tests.py  urls.py
Clinic/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
Commando/: apps.py
Dashboard/: admin.py  decorators.py  tests.py  urls.py  utils.py
SmileSlot/: asgi.py  hosts.py  installed.py  settings.py  sitemaps.py  urls.py  wsgi.py
billings/: apps.py  context_processors.py  jinja2.py  signals.py  urlbuilders.py  urls.py
bookings/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
doctors/: forms.py  serializers.py  tests.py  urls.py  views.py
helpers/: numbers.py
ki_bash/: pg-reset.sh  reset_migrations.sh
mixins/: custom_mixins.py
mpesa/: admin.py  core.py  forms.py  models.py  urls.py  utils.py  views.py
nginx/: nginx.conf
patients/: apps.py  tests.py  urls.py  utils.py  views.py
saas/: admin.py  cart.py  compat.py  decorators.py  docs.py  extras.py  filters.py  forms.py  humanize.py  ledger.py  mixins.py  models.py  pagination.py  renewals.py  settings.py  signals.py  tests.py  utils.py
slots/: admin.py  apps.py  decorators.py  forms.py  logger_config.py  messages_.py  models.py  services.py  settings.py  tasks.py  urls.py  views.py  views_admin.py
static/: 11_11.js  app.js  manifest.json  (+2 more)
(+283 files in other folders)
